fixed card overflow

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@
 }
 
 .edu-card {
-  height: 150px !important;
+  height: 165px !important;
   background-color: gold !important;
   color: maroon !important;
 }
